# cody

./: Cargo.toml  cclang.zsh  cody.cdy
examples/: basic.cdy  factorial.cdy
src/: arg_parser.rs  main.rs  mod.rs
src/compiler/: ast_converter.rs  ir_constructor.rs  mod.rs  scope.rs
src/parser/: ast_generator.rs  lexer.rs  mod.rs  node_types.rs  token_types.rs
src/syntax_tree/: ast.rs
